--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
+/* 05. reset css */
 body{margin:0; padding:0}
 a{text-decoration:none; color:black}
+/* 05. reset css */
 
-/* 추가 */
-p{margin:0;}
-
+/* 06. header css */
 header{display:flex; justify-content:space-between; padding:12px}
 header .header-right{display:flex;}
+/* 06. header css */
+
+/* 08. section css */
 section{padding:0 21px 0 12px;}
 section .logo_img{text-align:center; margin-top:30px; font-size:30px;}
 section .main_search{width:100%; margin-top:20px; height:26px; border-radius:22px; border:1px solid #999;}
+/* 08. section css */
 
-/* 추가 */
-footer{background:rgb(218, 218, 218);}
+/* 10. p reset */
+p{margin:0;}
+/* 10. p reset */
+
+/* 11. footer css */
+footer{background:rgb(218, 218, 218); position:absolute; bottom:0; width:100%;}
 footer > p:nth-of-type(1){padding:3px 6px;}
 footer > p:nth-of-type(2){border-top:1px solid rgb(187, 187, 187); border-bottom:1px solid rgb(187, 187, 187); text-align:center; padding:16px;}
 footer .etc{text-align:center; padding:16px;}
+/* 11. footer css */
