--- a/style.css
+++ b/style.css
@@ -4,14 +4,29 @@ a{text-decoration:none; color:black}
 /* 05. reset css */
 
 /* 06. header css */
-header{display:flex; justify-content:space-between; padding:12px}
+header{display:flex; justify-content:space-between; padding:14px}
+header .header-left{display:flex;}
+header .header-left > span{margin-right:18px}
+header .header-left > span > i{color:rgb(75, 75, 75);}
+header .header-left > a{display:block; font-size:13px; padding:0 7px; text-align:center; height:28px; color:rgb(107, 105, 105);}
+header .header-left > a.active{border-bottom:2px solid #4284F3; color:#4284F3; font-weight:bold}
 header .header-right{display:flex;}
+header .header-right > span > i{color:rgb(107, 105, 105);}
+header .header-right > div{width:80px; height:32px; background-color:#4284F3; border-radius:4px; font-size:13px; line-height:32px; text-align:center; color:#fff; position:relative; top:-7px; margin-left:10px}
 /* 06. header css */
 
 /* 08. section css */
-section{padding:0 21px 0 12px;}
-section .logo_img{text-align:center; margin-top:30px; font-size:30px;}
-section .main_search{width:100%; margin-top:20px; height:26px; border-radius:22px; border:1px solid #999;}
+section{padding:0 8px;}
+section .logo{text-align:center; margin-top:30px; font-size:30px;}
+section .logo > span{margin:0 -4px; font-weight:bold; font-size:42px;}
+section .logo > span:nth-of-type(1){color:#4284F3; font-size:52px;}
+section .logo > span:nth-of-type(2){color:#EA4335}
+section .logo > span:nth-of-type(3){color:#FABC05}
+section .logo > span:nth-of-type(4){color:#4284F3}
+section .logo > span:nth-of-type(5){color:#33A852}
+section .logo > span:nth-of-type(6){color:#EA4335}
+section .main_search{width:100%; margin-top:26px; height:36px; border-radius:22px; border:1px solid rgb(211, 211, 211); outline:none; box-sizing:border-box; padding-left:36px;}
+section > i{position:relative; top:-26px; left:12px; color:rgb(158, 158, 158);}
 /* 08. section css */
 
 /* 10. p reset */
@@ -19,8 +34,12 @@ p{margin:0;}
 /* 10. p reset */
 
 /* 11. footer css */
-footer{background:rgb(218, 218, 218); position:absolute; bottom:0; width:100%;}
-footer > p:nth-of-type(1){padding:3px 6px;}
-footer > p:nth-of-type(2){border-top:1px solid rgb(187, 187, 187); border-bottom:1px solid rgb(187, 187, 187); text-align:center; padding:16px;}
+footer{background:#F2F2F2; position:absolute; bottom:0; width:100%;}
+footer > p:nth-of-type(1){padding:8px 12px; font-size:16px; color:#797979}
+footer > p:nth-of-type(2){border-top:1px solid #D9DCE0; border-bottom:1px solid #D9DCE0; text-align:center; padding:16px; font-size:13px}
+footer > p:nth-of-type(2) > span{display:inline-block; width:10px; height:10px; border-radius:50%; background:rgb(105, 105, 105); position:relative; margin-right:4px;}
 footer .etc{text-align:center; padding:16px;}
+footer .etc > div{padding:4px;}
+footer .etc > div > span{font-size:13px; color:#777777}
+footer .etc > div > span:nth-of-type(2){margin:0 20px;}
 /* 11. footer css */
